[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/galahad_ai.gd" type="Script" id=1]

[node name="GalahadAI" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[node name="ChanceTimer" type="Timer" parent="."]
wait_time = 21.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ChanceTimer" to="." method="_on_ChanceTimer_timeout"]
